// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers channelsReducer should correctly getChannels 1`] = `
Object {
  "channels": Array [],
  "channelsLoading": true,
  "closedChannels": Array [],
  "closingChannel": false,
  "closingChannelIds": Array [],
  "filter": "ALL_CHANNELS",
  "filters": Array [
    Object {
      "key": "ALL_CHANNELS",
      "value": "All",
    },
    Object {
      "key": "ACTIVE_CHANNELS",
      "value": "Online",
    },
    Object {
      "key": "NON_ACTIVE_CHANNELS",
      "value": "Offline",
    },
    Object {
      "key": "OPEN_PENDING_CHANNELS",
      "value": "Pending",
    },
    Object {
      "key": "CLOSING_PENDING_CHANNELS",
      "value": "Closing",
    },
  ],
  "loadingChannels": Array [],
  "pendingChannels": Object {
    "pending_closing_channels": Array [],
    "pending_force_closing_channels": Array [],
    "pending_open_channels": Array [],
    "total_limbo_balance": null,
    "waiting_close_channels": Array [],
  },
  "searchQuery": null,
  "selectedChannelId": null,
  "sort": "OPEN_DATE",
  "sortOrder": "asc",
  "sorters": Array [
    Object {
      "key": "OPEN_DATE",
      "value": "Open date",
    },
    Object {
      "key": "REMOTE_BALANCE",
      "value": "Remote balance",
    },
    Object {
      "key": "LOCAL_BALANCE",
      "value": "Local balance",
    },
    Object {
      "key": "ACTIVITY",
      "value": "Activity",
    },
    Object {
      "key": "NAME",
      "value": "Name",
    },
    Object {
      "key": "CAPACITY",
      "value": "Capacity",
    },
  ],
  "suggestedNodes": Object {
    "mainnet": Array [
      Object {
        "description": "",
        "host": "104.236.133.196",
        "image": "",
        "nickname": "grspay.com",
        "pubkey": "0391c8d0e27fe61ed8cb8784aeae5848bd8b193ea5720dea32ca2694a326fe41f9",
      },
      Object {
        "description": "",
        "host": "104.236.130.222",
        "image": "",
        "nickname": "\\"LNmainnet",
        "pubkey": "03046e1650b0e67925d260f4888f809598af6cef58fbfc6446fbd4fddf1828ca3d",
      },
    ],
    "testnet": Array [
      Object {
        "description": "",
        "host": "95.179.140.39",
        "image": "",
        "nickname": "grspay.com",
        "pubkey": "0384dee0ec597a7b8235ccf56c68ffa0af5dae72b3455aa3ecb81c4fc4eef9ef2c",
      },
      Object {
        "description": "",
        "host": "45.32.236.128",
        "image": "",
        "nickname": "LNtestnet",
        "pubkey": "02435dea09ad875c36c88f680845277245e7e8bdd28b3bb20470e82e4de0c3cb09",
      },
    ],
  },
  "suggestedNodesError": null,
  "suggestedNodesLoading": false,
  "viewType": 0,
}
`;

exports[`reducers channelsReducer should correctly receiveChannel 1`] = `
Object {
  "channels": Array [
    1,
    2,
  ],
  "channelsLoading": false,
  "closedChannels": undefined,
  "closingChannel": false,
  "closingChannelIds": Array [],
  "filter": "ALL_CHANNELS",
  "filters": Array [
    Object {
      "key": "ALL_CHANNELS",
      "value": "All",
    },
    Object {
      "key": "ACTIVE_CHANNELS",
      "value": "Online",
    },
    Object {
      "key": "NON_ACTIVE_CHANNELS",
      "value": "Offline",
    },
    Object {
      "key": "OPEN_PENDING_CHANNELS",
      "value": "Pending",
    },
    Object {
      "key": "CLOSING_PENDING_CHANNELS",
      "value": "Closing",
    },
  ],
  "loadingChannels": Array [],
  "pendingChannels": Array [
    3,
    4,
  ],
  "searchQuery": null,
  "selectedChannelId": null,
  "sort": "OPEN_DATE",
  "sortOrder": "asc",
  "sorters": Array [
    Object {
      "key": "OPEN_DATE",
      "value": "Open date",
    },
    Object {
      "key": "REMOTE_BALANCE",
      "value": "Remote balance",
    },
    Object {
      "key": "LOCAL_BALANCE",
      "value": "Local balance",
    },
    Object {
      "key": "ACTIVITY",
      "value": "Activity",
    },
    Object {
      "key": "NAME",
      "value": "Name",
    },
    Object {
      "key": "CAPACITY",
      "value": "Capacity",
    },
  ],
  "suggestedNodes": Object {
    "mainnet": Array [
      Object {
        "description": "",
        "host": "104.236.133.196",
        "image": "",
        "nickname": "grspay.com",
        "pubkey": "0391c8d0e27fe61ed8cb8784aeae5848bd8b193ea5720dea32ca2694a326fe41f9",
      },
      Object {
        "description": "",
        "host": "104.236.130.222",
        "image": "",
        "nickname": "\\"LNmainnet",
        "pubkey": "03046e1650b0e67925d260f4888f809598af6cef58fbfc6446fbd4fddf1828ca3d",
      },
    ],
    "testnet": Array [
      Object {
        "description": "",
        "host": "95.179.140.39",
        "image": "",
        "nickname": "grspay.com",
        "pubkey": "0384dee0ec597a7b8235ccf56c68ffa0af5dae72b3455aa3ecb81c4fc4eef9ef2c",
      },
      Object {
        "description": "",
        "host": "45.32.236.128",
        "image": "",
        "nickname": "LNtestnet",
        "pubkey": "02435dea09ad875c36c88f680845277245e7e8bdd28b3bb20470e82e4de0c3cb09",
      },
    ],
  },
  "suggestedNodesError": null,
  "suggestedNodesLoading": false,
  "viewType": 0,
}
`;

exports[`reducers channelsReducer should handle initial state 1`] = `
Object {
  "channels": Array [],
  "channelsLoading": false,
  "closedChannels": Array [],
  "closingChannel": false,
  "closingChannelIds": Array [],
  "filter": "ALL_CHANNELS",
  "filters": Array [
    Object {
      "key": "ALL_CHANNELS",
      "value": "All",
    },
    Object {
      "key": "ACTIVE_CHANNELS",
      "value": "Online",
    },
    Object {
      "key": "NON_ACTIVE_CHANNELS",
      "value": "Offline",
    },
    Object {
      "key": "OPEN_PENDING_CHANNELS",
      "value": "Pending",
    },
    Object {
      "key": "CLOSING_PENDING_CHANNELS",
      "value": "Closing",
    },
  ],
  "loadingChannels": Array [],
  "pendingChannels": Object {
    "pending_closing_channels": Array [],
    "pending_force_closing_channels": Array [],
    "pending_open_channels": Array [],
    "total_limbo_balance": null,
    "waiting_close_channels": Array [],
  },
  "searchQuery": null,
  "selectedChannelId": null,
  "sort": "OPEN_DATE",
  "sortOrder": "asc",
  "sorters": Array [
    Object {
      "key": "OPEN_DATE",
      "value": "Open date",
    },
    Object {
      "key": "REMOTE_BALANCE",
      "value": "Remote balance",
    },
    Object {
      "key": "LOCAL_BALANCE",
      "value": "Local balance",
    },
    Object {
      "key": "ACTIVITY",
      "value": "Activity",
    },
    Object {
      "key": "NAME",
      "value": "Name",
    },
    Object {
      "key": "CAPACITY",
      "value": "Capacity",
    },
  ],
  "suggestedNodes": Object {
    "mainnet": Array [
      Object {
        "description": "",
        "host": "104.236.133.196",
        "image": "",
        "nickname": "grspay.com",
        "pubkey": "0391c8d0e27fe61ed8cb8784aeae5848bd8b193ea5720dea32ca2694a326fe41f9",
      },
      Object {
        "description": "",
        "host": "104.236.130.222",
        "image": "",
        "nickname": "\\"LNmainnet",
        "pubkey": "03046e1650b0e67925d260f4888f809598af6cef58fbfc6446fbd4fddf1828ca3d",
      },
    ],
    "testnet": Array [
      Object {
        "description": "",
        "host": "95.179.140.39",
        "image": "",
        "nickname": "grspay.com",
        "pubkey": "0384dee0ec597a7b8235ccf56c68ffa0af5dae72b3455aa3ecb81c4fc4eef9ef2c",
      },
      Object {
        "description": "",
        "host": "45.32.236.128",
        "image": "",
        "nickname": "LNtestnet",
        "pubkey": "02435dea09ad875c36c88f680845277245e7e8bdd28b3bb20470e82e4de0c3cb09",
      },
    ],
  },
  "suggestedNodesError": null,
  "suggestedNodesLoading": false,
  "viewType": 0,
}
`;
